<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/spacing_large">

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_middle" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/stackoverflow_icon"
            android:src="@drawable/stack_overflow_logo" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_large" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/welcome_to_stack_overflow"
            android:textColor="@color/orange"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/sign_in_to_continue"
            android:textColor="@color/blue_grey_300"
            android:textSize="16sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:background="@drawable/btn_rounded_orange"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_medium" />

        <LinearLayout
            android:id="@+id/sign_up_for_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="invisible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_for_an_account"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textColor="@color/blue_grey_400" />


        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_xlarge" />

    </LinearLayout>

</RelativeLayout>